--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -100,17 +100,20 @@ Single-cell RNA sequencing, expression variability, transcriptional noise, diffe
 \hypertarget{reproducibility}{%
 \subsection{Reproducibility}\label{reproducibility}}
 
-The following R, Bioconductor and package version were used for this workflow:
+The following software versions were used throughout this workflow:
 
-\textbf{R version}: R Under development (unstable) (2020-01-28 r77738)
+\begin{itemize}
+\item
+  \textbf{R version}: R Under development (unstable) (2020-01-28 r77738)
+\item
+  \textbf{Bioconductor version}: 3.11
+\item
+  \textbf{R packages}: BASiCS 1.99.1, scran
+  1.15.29, scater 1.15.32. Version
+  numbers for all remaining packages is available at \protect\hyperlink{session-info}{Session Info}.
+\end{itemize}
 
-\textbf{Bioconductor version}: 3.11
-
-\textbf{Packages}: BASiCS 1.99.1, scran
-1.15.29, scater 1.15.32, coda
-0.19.3, goseq 1.39.0
-
-For the full list of packages used, please see the \protect\hyperlink{session-info}{Session Info}.
+A Docker image containing all software requirements is available at {[}ADD LINK{]}.
 
 \hypertarget{Tcells}{%
 \section{\texorpdfstring{C1 Fluidigm data: Analysis of naive CD4\textsuperscript{+} T cells}{C1 Fluidigm data: Analysis of naive CD4+ T cells}}\label{Tcells}}
